[package]
name = "cfa"
version = "0.1.0"
authors = ["tumbleshack <bmckaym@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
serde_json = "1.0"

serde = { version = "1.0", features = ["derive"] }


