[package]
name = "cfa"
version = "0.1.0"
authors = ["tumbleshack <bmckaym@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
reqwest = { version = "0.11.3", features = ["json"]}
serde_json = "1.0"
futures = "0.3.15"
tokio = { version = "1.3.0", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }


