[package]
name = "cfa"
version = "0.1.0"
authors = ["tumbleshack <bmckaym@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
crossbeam-utils = "0.8.4"
indexmap = "1.0.2"
itertools = "0.9.0"
fixedbitset = "0.4.0"
num-traits = "0.2.6"
reqwest = { version = "0.11.3", features = ["json"]}
rustc-hash = "1.1.0"
serde_json = "1.0"
futures = "0.3.15"
tokio = { version = "1.3.0", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }


